--- a/SLYVAN/css/main.css
+++ b/SLYVAN/css/main.css
@@ -155,7 +155,7 @@
 
 /*path */ 
 .page-path{
-	width: 948px;
+	width: 1000px;
 	margin: 0 auto;
 	border-bottom: 1px solid #ccc;
 	margin-bottom: 20px;
@@ -174,18 +174,23 @@
 	margin: 0 auto;
 	height: 1000px;
 	background-color: #ccc;
-	font-size: 100px;
 	color: #fff;
 	text-align: center;
+	padding: 10px;
 }	
 /*path */
 .foot{
 	width: 100%;
-	height: 150px;
-	padding-top: 150px;
-	background-color: #567;
-	text-align: center;
-	color: #fff;
-	font-size: 2em;
+	background-color: #fff;
+	color: #909090;
+	border-top: 10px #EEEEEE solid;
 }	
-
+.foot-content{
+	width: 900px;
+	padding: 20px;
+	margin: 0 auto;
+}
+.foot-item{
+   width: 25%;
+   line-height: 25px;
+}
